--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -28,3 +28,10 @@
 .login {
     margin-left: 20px;
 }
+
+.header-container {
+    color: #5995DA;
+    background-color: #D6E9FE;
+    display: flex;
+    justify-content: center;
+}
