--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -35,3 +35,10 @@
     display: flex;
     justify-content: center;
 }
+
+.header {
+    width: 900px;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+}
