style(.photo.grid-container): Add new style

--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -46,3 +46,7 @@
 }
 
 /** Photo container and item styles *********** */
+.photo.grid-container {
+    display: flex;
+    justify-content: center;
+}
