--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -50,3 +50,9 @@
     display: flex;
     justify-content: center;
 }
+
+.photo-grid {
+    width: 900px;
+    display: flex;
+    justify-content: flex-start;
+}
