--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -76,3 +76,10 @@ div.photo.grid-container {
     display: flex;
     justify-content: center;
 }
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #D6E9FE;
+    height: 200px;
+    flex: 1;
+}
