style(.footer-one, .footer-three): Add style
* Add to make the first and third footers half the size of the center

--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -83,3 +83,9 @@ div.photo.grid-container {
     height: 200px;
     flex: 1;
 }
+.footer-one,
+.footer-three {
+    background-color: #5995DA;
+    flex: initial;
+    width: 300px;
+}
